- When caching is active for MSH DispatchClient - Ehcache will ignore size calculations therefore no WARNs will be generated in logs
- Possibility to route JMS messages in the JMS Plugin to specific queues depending on service and action
- Added JDK 11 support
- Added Foreign Servers support in Weblogic
Domibus 4.1.4
- Added manual runtime registration for the BouncyCastle provider
- Added JMS message property 'finalRecipientType' in the JMS Plugin, which is required to send JMS message in Dynamic discovery for SMP lookup.
- Remove unnecessary jmx looping when looking up destination in weblogic jms manager
- Fixed the issue regarding duplicate retrieval of messages by multiple concurrent clients
Domibus 4.1.3
- Remove unnecessary RMI port usage from ActiveMQ on Tomcat
- Fixed payload encryption at start up of WebLogic cluster
- Fixed subject for certificate imminent expiration alert
- Fixed ListPendingMessages which returned messages in an intermediate state
- CXF Mtom/XOP request contain wrong encoded Content-ID HTTP header
- domain_name.domibus.attachment.temp.storage.location property is missing in sample domain_name-domibus.properties file
- Test Service fails using pushAndPush binding
Domibus 4.1.2
- Possibility to encrypt passwords in the configuration files
- Possibility to encrypt payloads at rest
- Test Service improvements
- JMS Queues statistics
- FS Plugin fix to save the MessageInfo in metadata.xml
- Merge cacerts and custom truststore for DSS extension data loader.
- More properties to configure the datasource on Tomcat
- Optimize Domibus PULL for receiver with multiple legs
- Added the possibility to upload and download PMode file using REST services
- Removed the Domibus payload from being printed to logs if org.apache.cxf is set to INFO in logback.xml - domibus.logging.payload.print property (default to false)
- JMS Plugin queues are available to remote clients for Wildfly 12