@@ -156,7 +156,6 @@ public interface DomibusPropertyMetadataManager {
     String DOMIBUS_ALERT_USER_ACCOUNT_DISABLED_SUBJECT = DOMIBUS_ALERT_USER_ACCOUNT_DISABLED_PREFIX + "subject";
     String DOMIBUS_ALERT_USER_ACCOUNT_ENABLED_ACTIVE = DOMIBUS_ALERT_USER_ACCOUNT_ENABLED_PREFIX + "active";
     String DOMIBUS_ALERT_USER_ACCOUNT_ENABLED_LEVEL = DOMIBUS_ALERT_USER_ACCOUNT_ENABLED_PREFIX + "level";
-    String DOMIBUS_ALERT_USER_ACCOUNT_ENABLED_MOMENT = DOMIBUS_ALERT_USER_ACCOUNT_ENABLED_PREFIX + "moment";
     String DOMIBUS_ALERT_USER_ACCOUNT_ENABLED_SUBJECT = DOMIBUS_ALERT_USER_ACCOUNT_ENABLED_PREFIX + "subject";
     String DOMIBUS_ALERT_CERT_IMMINENT_EXPIRATION_ACTIVE = DOMIBUS_ALERT_CERT_IMMINENT_EXPIRATION_PREFIX + "active";
     String DOMIBUS_ALERT_CERT_IMMINENT_EXPIRATION_DELAY_DAYS = DOMIBUS_ALERT_CERT_IMMINENT_EXPIRATION_PREFIX + "delay_days";
@@ -197,7 +196,6 @@ public interface DomibusPropertyMetadataManager {
     String DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_DISABLED_SUBJECT = DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_DISABLED_PREFIX + "subject";
     String DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_ACTIVE = DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_PREFIX + "active";
     String DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_LEVEL = DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_PREFIX + "level";
-    String DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_MOMENT = DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_PREFIX + "moment";
     String DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_SUBJECT = DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_PREFIX + "subject";
 
     String DOMIBUS_PULL_REQUEST_SEND_PER_JOB_CYCLE = "domibus.pull.request.send.per.job.cycle";
