@@ -597,6 +597,15 @@ activeMQ.embedded.configurationFile=file:///${domibus.config.location}/internal/
 #Account disabled mail subject.
 #domibus.alert.user.account_disabled.subject=Account disabled
 
+#Enable/disable the account enabled alert of the authentication module.
+#domibus.alert.user.account_enabled.active=false
+
+#Alert level for account enabled.
+#domibus.alert.user.account_enabled.level=MEDIUM
+
+#Account enabled mail subject.
+#domibus.alert.user.account_enabled.subject=Account enabled
+
 # ---------------------------------- Alert management:Certificate scanner -----------------
 
 #Enable/disable the imminent certificate expiration alert of certificate scanner module.
@@ -718,6 +727,15 @@ activeMQ.embedded.configurationFile=file:///${domibus.config.location}/internal/
 
 #Account disabled mail subject.
 #domibus.alert.plugin.user.account_disabled.subject=Account disabled
+
+#Enable/disable the account enabled alert of the authentication module.
+#domibus.alert.plugin.user.account_enabled.active=false
+
+#Alert level for account enabled.
+#domibus.alert.plugin.user.account_enabled.level=MEDIUM
+
+#Account enabled mail subject.
+#domibus.alert.plugin.user.account_enabled.subject=Account enabled
 
 # ---------------------------------- UI Replication -----------------------------------
 #Cron job that will check unsynchronized data between native tables and TB_UI_MESSAGE_UI
