@@ -512,6 +512,15 @@ domibus.entityManagerFactory.jpaProperty.hibernate.transaction.jta.platform=org.
 #Account disabled mail subject.
 #domibus.alert.user.account_disabled.subject=Account disabled
 
+#Enable/disable the account enabled alert of the authentication module.
+#domibus.alert.user.account_enabled.active=false
+
+#Alert level for account enabled.
+#domibus.alert.user.account_enabled.level=MEDIUM
+
+#Account enabled mail subject.
+#domibus.alert.user.account_enabled.subject=Account enabled
+
 # ---------------------------------- Alert management:Certificate scanner -----------------
 
 #Enable/disable the imminent certificate expiration alert of certificate scanner module.
@@ -607,6 +616,41 @@ domibus.entityManagerFactory.jpaProperty.hibernate.transaction.jta.platform=org.
 
 #Password expiration mail subject.
 #domibus.alert.plugin_password.expired.mail.subject=Password expired
+
+# ---------------------------------- Alert management:Authentication module for Plugin users-----------------
+
+#Enable/disable the login failure alert of the authentication module.
+#domibus.alert.plugin.user.login_failure.active=true
+
+#Alert level for login failure.
+#domibus.alert.plugin.user.login_failure.level=LOW
+
+#Login failure mail subject.
+#domibus.alert.plugin.user.login_failure.mail.subject=Login failure
+
+#Enable/disable the account disable alert of the authentication module.
+#domibus.alert.plugin.user.account_disabled.active=true
+
+#Alert level for account disabled.
+#domibus.alert.plugin.user.account_disabled.level=HIGH
+
+#When should the account disabled alert be triggered.
+# 2 possible values:
+# AT_LOGON: An alert will be triggered each time a user tries to login to a disabled account.
+# WHEN_BLOCKED: An alert will be triggered once when the account got disabled.
+#domibus.alert.plugin.user.account_disabled.moment=WHEN_BLOCKED
+
+#Account disabled mail subject.
+#domibus.alert.plugin.user.account_disabled.subject=Account disabled
+
+#Enable/disable the account enabled alert of the authentication module.
+#domibus.alert.plugin.user.account_enabled.active=false
+
+#Alert level for account enabled.
+#domibus.alert.plugin.user.account_enabled.level=MEDIUM
+
+#Account enabled mail subject.
+#domibus.alert.plugin.user.account_enabled.subject=Account enabled
 
 # ---------------------------------- UI Replication -----------------------------------
 #Cron job that will check unsynchronized data between native tables and TB_UI_MESSAGE_UI
