@@ -375,6 +375,15 @@ default.domibus.alert.receiver.email=
 #Account disabled mail subject.
 #default.domibus.alert.user.account_disabled.subject=Account disabled
 
+#Enable/disable the account enabled alert of the authentication module.
+#default.domibus.alert.user.account_enabled.active=false
+
+#Alert level for account enabled.
+#default.domibus.alert.user.account_enabled.level=MEDIUM
+
+#Account enabled mail subject.
+#default.domibus.alert.user.account_enabled.subject=Account enabled
+
 # ---------------------------------- Alert management:Authentication module for Plugin users-----------------
 
 #Enable/disable the login failure alert of the authentication module.
