@@ -240,6 +240,15 @@ domibus.alert.user.account_disabled.moment=WHEN_BLOCKED
 #Account disabled mail subject.
 domibus.alert.user.account_disabled.subject=Account disabled
 
+#Enable/disable the account enabled alert of the authentication module.
+domibus.alert.user.account_enabled.active=false
+
+#Alert level for account enabled.
+domibus.alert.user.account_enabled.level=MEDIUM
+
+#Account enabled mail subject.
+domibus.alert.user.account_enabled.subject=Account enabled
+
 # ---------------------------------- Alert management:Certificate scanner -----------------
 
 #Enable/disable the imminent certificate expiration alert of certificate scanner module.
@@ -568,6 +577,15 @@ domibus.alert.plugin.user.account_disabled.moment=WHEN_BLOCKED
 
 #Account disabled mail subject.
 domibus.alert.plugin.user.account_disabled.subject=Account disabled
+
+#Enable/disable the account enabled alert of the authentication module.
+domibus.alert.plugin.user.account_enabled.active=false
+
+#Alert level for account enabled.
+domibus.alert.plugin.user.account_enabled.level=MEDIUM
+
+#Account enabled mail subject.
+domibus.alert.plugin.user.account_enabled.subject=Account enabled
 
 # ---------------------------------- Metrics -----------------
 
